--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,22 @@
 ---
-title: "Seanmgard.github.io"
+title: "Sean Gardner"
+image: C:\Users\seanm\OneDrive\Documents\R Projects\Blog\Images\IMG_3489.png
+toc: false
+about:
+  template: trestles
+  image-shape: round
+  image-width: 20em
+  links:
+    - text: LinkedIn
+      href: https://www.linkedin.com/in/https://www.linkedin.com/in/seanmgardner/
+    - text: Twitter
+      href: https://twitter.com/SeanGardner22
+    - text: GitHub
+      href: https://github.com/Seanmgard
+    - text: Email
+      href: mailto:seanmgard@gmail.com
 ---
 
-This is a Quarto website.
+My name is Sean Gardner. I'm an Associate Manager of Forecasting at a market research firm, where I specialize in modeling new product innovations for major CPG brands. I graduated from Indiana University in 2019, where I studied Economics and Strategic Interaction.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+I have a passion for data and wanted to set up some space where I can post about things I've been working on in my free time. I want this to be a space where I can keep track of my progress in data visualization and modeling, and hopefully learn from anyone that knows more about these topics.
