--- a/posts/2023-09-22-High-School-Recruit-Analysis/index.qmd
+++ b/posts/2023-09-22-High-School-Recruit-Analysis/index.qmd
@@ -2,7 +2,7 @@
 title: "Analyzing the High School Recruit to NFL Draft Pick Pipeline"
 ---
 
-Each year, ESPN ranks the top 300 high school football recruits in the country. Athletes across the nation are evaluated on a variety of metrics to determine how they compare vs. their peers by state, position, and across the nation. These lists are usually a great indicator of how impactful players are for their varsity team. For example, Malachi Nelson, the #1 ranked player in the class of 2023, passed for 2,898 yards and 35 touchdowns this past season. Next year he'll be attending the University of Southern California (USC), where fans and analysts will be evaluating whether he's the next future NFL star. We've seen plenty of examples of that in recent history. Just five years ago, Justin Fields and Trevor Lawrence, now rising QBs in the NFL, ranked as the number 1 and number 2 players in the class of 2018.
+Each year, ESPN ranks the top 300 high school football recruits in the country. Players are evaluated on a variety of metrics to determine how they compare vs. their peers by state, position, and across the nation. These lists are usually a great indicator of how impactful players are for their varsity team. For example, Malachi Nelson, the #1 ranked player in the class of 2023, passed for 2,898 yards and 35 touchdowns this past season. Next year he'll be attending the University of Southern California (USC), where fans and analysts will be evaluating whether he's the next future NFL star. We've seen plenty of examples of that in recent history. Just five years ago, Justin Fields and Trevor Lawrence, now rising QBs in the NFL, ranked as the number 1 and number 2 players in the class of 2018.
 
 As I mentioned, the top 300 list is meant to reflect how talented players are at a given point in time. But how well does it predict future success? One would think recruiting grades correlate well with eventual draft likelihood, but is that actually the case? Furthermore, do those trends hold across all positions? In this analysis, I set out to start answering those questions.
 
@@ -20,7 +20,7 @@ The first takeaway here may be that truly top talents are easy to evaluate from 
 
 A few interesting themes emerge here. First, skill positions like WR tend to comprise a meaningful selection of the top ESPN recruits each year. This makes sense if we think about the depth chart of any given football team. Unlike many other positions (ex: FB), there will often be 2-4 receivers on the field at a time, which makes the position itself that much more valuable.
 
-That said, we still see some interesting dynamics within positions. Prior to this analysis, my hypothesis was that certain positions may have a higher likelihood of being drafted after ranking highly in high school than others. Instead, the themes across each of these are relatively consistent. I suppose this makes sense too. Think for a moment about five of the top QBs in the league at this moment (Patrick Mahomes, Jalen Hurts, Joe Burrow, Josh Allen, and Justin Herbert). Of those players, only Joe Burrow was ranked among the Top 300 high school recruits coming into college, and he ranked 298th. It's**hard**to predict these things.
+That said, we still see some interesting dynamics within positions. Prior to this analysis, my hypothesis was that certain positions may have a higher likelihood of being drafted after ranking highly in high school than others. Instead, the themes across each of these are relatively consistent. I suppose this makes sense too. Think for a moment about five of the top QBs in the league at this moment (Patrick Mahomes, Jalen Hurts, Joe Burrow, Josh Allen, and Justin Herbert). Of those players, only Joe Burrow was ranked among the Top 300 high school recruits coming into college, and he ranked 298th. It's **hard** to predict these things.
 
 ### Talent Evaluation by School
 
