--- a/index.qmd
+++ b/index.qmd
@@ -21,6 +21,12 @@ about:
       href: mailto:seanmgard@gmail.com
 ---
 
-My name is Sean Gardner. I'm an Associate Manager of Forecasting at a market research firm, where I specialize in modeling new product innovations for major CPG brands. I graduated from Indiana University in 2019, where I studied Economics and Strategic Interaction.
+::: centered-text
+# **About Me**
 
-I have a passion for data and wanted to set up some space where I can post about things I've been working on in my free time. I want this to be a space where I can keep track of my progress in data visualization and modeling, and hopefully learn from anyone that knows more about these topics.
+I'm a Quantitative Research Associate on the Wealth Management Portfolio Research team at Northern Trust. Before my time at Northern Trust, I was also on the Forecasting team at NielsenIQ, where I specialized in data analytics and forecasts for new product innovations. I graduated from Indiana University in 2019 with a degree in Economics.
+
+I have a passion for data and wanted to set up some space where I can post about things I've been working on in my free time. I want this to be a space where I can keep track of my progress in data visualization and modeling, and hopefully learn from others as well.
+
+Please reach out through email or social for any inquiries!
+:::
