--- a/index.qmd
+++ b/index.qmd
@@ -26,7 +26,7 @@ about:
 
 I'm a Quantitative Research Associate on the Portfolio Research team at Northern Trust. Before my time at Northern Trust, I was also on the Forecasting team at NielsenIQ, where I specialized in data analytics and forecasts for new product innovations. I graduated from Indiana University in 2019 with a degree in Economics.
 
-I have a passion for data and wanted to set up some space where I can post about things I've been working on in my free time. I want this to be a space where I can keep track of my progress in data visualization and modeling, and hopefully learn from others as well.
+I have a passion for data and wanted to set up a space where I can post about things I've been working on in my free time. I want this to be a space where I can keep track of my progress in data visualization and modeling, and hopefully learn from others as well.
 
 Please reach out through email or social for any inquiries!
 :::
