--- a/Visualizations.qmd
+++ b/Visualizations.qmd
@@ -4,10 +4,10 @@
 
 ::: grid
 ::: g-col-6
-![](images/image-1676217400.png){.gray-frame}
+![](images/Unions.png){.gray-frame}
 :::
 
 ::: g-col-6
-![](images/image-624228713.png){.gray-frame}
+![](images/Natural_Resources.png){.gray-frame}
 :::
 :::
