--- a/Visualizations.qmd
+++ b/Visualizations.qmd
@@ -4,10 +4,10 @@
 
 ::: grid
 ::: g-col-6
-![](images/Unions.png){.gray-frame}
+![](Images/Unions.png){.gray-frame}
 :::
 
 ::: g-col-6
-![](images/Natural_Resources.png){.gray-frame}
+![](Images/Natural_Resources.png){.gray-frame}
 :::
 :::
