--- a/Visualizations.qmd
+++ b/Visualizations.qmd
@@ -21,4 +21,9 @@ lightbox: auto
 ::: g-col-6
 ![](Images/Roy_Kent_Final_Plot.png){.gray-frame .lightbox}
 :::
+
+::: g-col-6
+![](Images/G7 Gini Coefficient.png){.gray-frame .lightbox}
+
+:::
 :::
