--- a/posts/2024-04-08-Investigating-Beatles/index.qmd
+++ b/posts/2024-04-08-Investigating-Beatles/index.qmd
@@ -1,6 +1,12 @@
 ---
 title: "Investigating The Beatles with Machine Learning"
 date: "2024-04-08"
+twitter:
+  card: summary_large_image
+  site: "@SeanGardner22"
+  creator: "@SeanGardner22"
+  title: "Investigating The Beatles"
+  description: "An in-depth look into The Beatles' music."
 ---
 
 During my sophomore year in college, I enrolled in a class titled 'Music of the Beatles', which was taught by the legendary Glenn Gass. Glenn spent over 40 years teaching at Indiana University and famously developed the first history of rock and roll course at a major university. The course was taught late in the evening on Tuesdays and Thursdays and took place in an old lecture hall at the center of campus, where Glenn would spend almost two hours walking us through the history of the Beatles. We listened to every album from that era, absorbing the stories and inspirations behind every song, and appreciating their unique brilliance.
